--- a/src/less/kretschmannio.less
+++ b/src/less/kretschmannio.less
@@ -5,32 +5,56 @@
 
 @import "variables.less";
 @import "normalize.less";
-@import "mixins.less";
 
 
 //
 // Stuff
 //
 
+// Reset the box-sizing
+* {
+    &,
+    &:before,
+    &:after {
+        box-sizing: border-box;
+    }
+}
+
+html,
+body,
+body > section { height: 100%; }
 
 html,
 body {
     background-color: @body-background;
 }
+
 body {
-    padding: 5%;
+    padding: 10%;
     font-family: @font-family-sans-serif;
     font-size: @font-size-base;
     font-weight: 400;
     line-height: @line-height-base;
     text-align: center;
     color: @text-color;
+
+    > section {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    @media screen and (min-width: 1100px) {
+        font-size: @font-size-large;
+    }
 }
 
 // Links
 a {
     color: @link-color;
     text-decoration: none;
+    transition: all .2s ease-in-out;
     &:hover {
         color: @link-color-hover;
         text-decoration: underline;
@@ -49,6 +73,11 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     font-size: @font-size-large;
+    margin-top: 0;
+
+    @media screen and (min-width: 1100px) {
+        font-size: @font-size-large*1.25;
+    }
 }
 
 p {
@@ -60,13 +89,6 @@ ul {
     margin: 0 0 15px 25px;
     padding: 0;
 }
-.list-unstyled {
-    margin-left: 0;
-    li {
-        display: block;
-    }
-
-}
 
 
 // Buttons
@@ -77,9 +99,13 @@ ul {
     display: inline-block;
     color: @link-color;
     text-align: center;
-    letter-spacing: -1px;
     background: darken(@brand-light, 2%);
     border-radius: 3px;
+    font-size: @font-size-small;
+
+    @media screen and (min-width: 1100px) {
+        font-size: @font-size-base;
+    }
 
     &:hover,
     &:active {
@@ -95,40 +121,5 @@ ul {
 }
 
 footer {
-    margin-top: @line-height-base*4;
-}
-
-// Responsive
-@media screen and (min-width: 820px) {
-    
-    body {
-        padding: 10%;
-    }
-
-    .btn {
-        
-        margin-bottom: 0;
-    }
-
-    // Push over the container contents to make room
-    .container {
-        margin-left: 30%;
-        margin-right: 10%;
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-}
-
-// Larger responsive
-@media screen and (min-width: 1100px) {
-    body {
-        padding: 15%;
-        font-size: @font-size-large;
-    }
-    
-    h1 {
-        font-size: @font-size-large*1.25;
-    }
-
+    margin-top: @line-height-base*2;
 }
